# cli

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  justfile  package-lock.json
.github/workflows/: deploy.yml  verify.yaml
page/: index.html
public/: meetups.toml  page.css
public/meetups/: opensource_0.md
public_files/: meetups.toml
public_files/meetups/: opensource_0.md
src/: docs.rs  main.rs  remote.rs
src/chat/: mod.rs
src/markdown/: app.rs  commands.rs  events.rs  mod.rs  navigation.rs  search.rs  theme.rs  ui.rs
src/meetups/: init.rs  mod.rs  website.rs
src/meetups/website/: md.rs  mod.rs
