[package]
name = "rust-basel-cli"
version = "0.1.1"
edition = "2024"
authors = ["rust-basel"]
description = "The cli to explore meetups and interact"
license = "MIT"
repository = "https://github.com/rust-basel/cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "basel"
path = "src/main.rs"

[dependencies]
argh = "0.1.13"
inquire = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9"
ratatui = "0.29"
crossterm = "0.28"
color-eyre = { version = "0.6.5", features = ["issue-url", "url"] }
maud = "0.27.0"
markdown = "1.0.0"
xshell = "0.2.7"
dirs = "6.0.0"
